Tidy up create/update API.
