# spring-boot-microservice-api/open-api-specification.yml
@@ -36,7 +36,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Item'
+              $ref: '#/components/schemas/ItemRequestBody'
       responses:
         '201':
           description: 'Created'
@@ -100,7 +100,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Item'
+              $ref: '#/components/schemas/ItemRequestBody'
       responses:
         '204':
           description: No content
@@ -145,12 +145,22 @@ components:
   schemas:
     Item:
       required:
+        - id
         - name
         - description
       properties:
         id:
           type: integer
           format: int64
+        name:
+          type: string
+        description:
+          type: string
+    ItemRequestBody:
+      required:
+        - name
+        - description
+      properties:
         name:
           type: string
         description:
